x-IMU3-API/CSharp/x-IMU3/CApi.cs


        public enum XIMU3_ChargingStatus
        {
            XIMU3_ChargingStatusNotConnected,
            XIMU3_ChargingStatusCharging,
            XIMU3_ChargingStatusChargingComplete,
            XIMU3_ChargingStatusChargingOnHold,
        }
        public enum XIMU3_ConnectionType
        {
            XIMU3_ConnectionTypeUsb,
            XIMU3_ConnectionTypeSerial,
            XIMU3_ConnectionTypeTcp,
            XIMU3_ConnectionTypeUdp,
            XIMU3_ConnectionTypeBluetooth,
            XIMU3_ConnectionTypeFile,
        }
        public enum XIMU3_DecodeError
        {
            XIMU3_DecodeErrorBufferOverrun,
            XIMU3_DecodeErrorInvalidMessageIdentifier,
            XIMU3_DecodeErrorInvalidUtf8,
            XIMU3_DecodeErrorInvalidJson,
            XIMU3_DecodeErrorJsonIsNotAnObject,
            XIMU3_DecodeErrorJsonObjectIsNotASingleKeyValuePair,
            XIMU3_DecodeErrorInvalidEscapeSequence,
            XIMU3_DecodeErrorInvalidBinaryMessageLength,
            XIMU3_DecodeErrorUnableToParseAsciiMessage,
        }
        public enum XIMU3_FileConverterStatus
        {
            XIMU3_FileConverterStatusComplete,
            XIMU3_FileConverterStatusFailed,
            XIMU3_FileConverterStatusInProgress,
        }
        public enum XIMU3_Result
        {
            XIMU3_ResultOk,
            XIMU3_ResultError,
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_CharArrays
        {
            public IntPtr array;
            public UInt32 length;
            public UInt32 capacity;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_CommandMessage
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] json;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] key;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] value;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] error;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_UsbConnectionInfo
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] port_name;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_SerialConnectionInfo
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] port_name;
            public UInt32 baud_rate;
            public bool rts_cts_enabled;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_TcpConnectionInfo
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] ip_address;
            public UInt16 port;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_UdpConnectionInfo
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] ip_address;
            public UInt16 send_port;
            public UInt16 receive_port;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_BluetoothConnectionInfo
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] port_name;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_FileConnectionInfo
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] file_path;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_PingResponse
        {
            public XIMU3_Result result;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] interface_;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] device_name;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] serial_number;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_Statistics
        {
            public UInt64 timestamp;
            public UInt64 data_total;
            public UInt32 data_rate;
            public UInt64 message_total;
            public UInt32 message_rate;
            public UInt64 error_total;
            public UInt32 error_rate;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_InertialMessage
        {
            public UInt64 timestamp;
            public float gyroscope_x;
            public float gyroscope_y;
            public float gyroscope_z;
            public float accelerometer_x;
            public float accelerometer_y;
            public float accelerometer_z;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_MagnetometerMessage
        {
            public UInt64 timestamp;
            public float x;
            public float y;
            public float z;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_QuaternionMessage
        {
            public UInt64 timestamp;
            public float w;
            public float x;
            public float y;
            public float z;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_RotationMatrixMessage
        {
            public UInt64 timestamp;
            public float xx;
            public float xy;
            public float xz;
            public float yx;
            public float yy;
            public float yz;
            public float zx;
            public float zy;
            public float zz;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_EulerAnglesMessage
        {
            public UInt64 timestamp;
            public float roll;
            public float pitch;
            public float yaw;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_LinearAccelerationMessage
        {
            public UInt64 timestamp;
            public float quaternion_w;
            public float quaternion_x;
            public float quaternion_y;
            public float quaternion_z;
            public float acceleration_x;
            public float acceleration_y;
            public float acceleration_z;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_EarthAccelerationMessage
        {
            public UInt64 timestamp;
            public float quaternion_w;
            public float quaternion_x;
            public float quaternion_y;
            public float quaternion_z;
            public float acceleration_x;
            public float acceleration_y;
            public float acceleration_z;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_AhrsStatusMessage
        {
            public UInt64 timestamp;
            public float initialising;
            public float angular_rate_recovery;
            public float acceleration_recovery;
            public float magnetic_recovery;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_HighGAccelerometerMessage
        {
            public UInt64 timestamp;
            public float x;
            public float y;
            public float z;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_TemperatureMessage
        {
            public UInt64 timestamp;
            public float temperature;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_BatteryMessage
        {
            public UInt64 timestamp;
            public float percentage;
            public float voltage;
            public float charging_status;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_RssiMessage
        {
            public UInt64 timestamp;
            public float percentage;
            public float power;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_SerialAccessoryMessage
        {
            public UInt64 timestamp;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE)]
            public byte[] char_array;
            public UIntPtr number_of_bytes;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_NotificationMessage
        {
            public UInt64 timestamp;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE)]
            public byte[] char_array;
            public UIntPtr number_of_bytes;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_ErrorMessage
        {
            public UInt64 timestamp;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE)]
            public byte[] char_array;
            public UIntPtr number_of_bytes;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_FileConverterProgress
        {
            public XIMU3_FileConverterStatus status;
            public float percentage;
            public UInt64 bytes_processed;
            public UInt64 bytes_total;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_NetworkAnnouncementMessage
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] device_name;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] serial_number;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] ip_address;
            public UInt16 tcp_port;
            public UInt16 udp_send;
            public UInt16 udp_receive;
            public Int32 rssi;
            public Int32 battery;
            public XIMU3_ChargingStatus charging_status;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_NetworkAnnouncementMessages
        {
            public IntPtr array;
            public UInt32 length;
            public UInt32 capacity;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_Device
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] device_name;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = XIMU3_CHAR_ARRAY_SIZE)]
            public byte[] serial_number;
            public XIMU3_ConnectionType connection_type;
            public XIMU3_UsbConnectionInfo usb_connection_info;
            public XIMU3_SerialConnectionInfo serial_connection_info;
            public XIMU3_BluetoothConnectionInfo bluetooth_connection_info;
        }
        [StructLayout(LayoutKind.Sequential)]
        public struct XIMU3_Devices
        {
            public IntPtr array;
            public UInt32 length;
            public UInt32 capacity;
        }
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackResult(XIMU3_Result data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackPingResponseC(XIMU3_PingResponse data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackCharArrays(XIMU3_CharArrays data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackDecodeError(XIMU3_DecodeError data, IntPtr context);
